using System;
using System.Collections.Generic;
using System.Text;

namespace swe_mtcg.Card
{
    public enum CardType
    {
        SpellCard,
        MonsterCard
    }
}
