namespace swe_mtcg.Card
{
    public enum MonsterCardCreatureType
    {
        Human,
        Goblin,
        Wizard,
        Dragon,
        Ork,
        Knight,
        Kraken,
        FireElv
    }
}
