@startuml
skinparam classAttributeIconSize 0

Interface ICard{
 +Guid Id
 +double Damage
 +string Name
 +CardType Type
 +double GetAttackValue(ICard other)
}

class AbstractCard{
 +Guid Id
 +double Damage
 +string Name
 +CardType Type
 +double GetAttackValue(ICard other)
 +double GetEffectivenessMultiplier(ICard other)
 +int Battle(ICard card1, ICard card2)
}
ICard <|--- AbstractCard

class MonsterCard{
 -MonsterCardCreatureType _type
 +MonsterCardCreatureType GetCreatureType()
}
enum MonsterCardCreatureType{
 Human
 Goblin
 Wizard
 Dragon
 Ork
 Knight
 Kraken
 FireElv
}

class SpellCard{
}
enum CardType{
 Normal
 Water
 Fire
}
AbstractCard <|-- MonsterCard
AbstractCard <|-- SpellCard

class User{
 +string LoginName
 +string NameTag
 +string Bio
 +string Status
 +double Elo
 +double Coins
 +List<ICard> Stack
 +GetGameHistory()
 +List<ICard>[4] Deck
}


class "Client / Curl Script"{
 +Register()
 +Login()
 +CreatePackage()
 +AcquirePackage()
 +ShowAcquiredPackages()
 +ShowDeck()
 +ConfigureDeck()
 +EditUserData()
 +DisplayStats()
 +DisplayScoreboard()
 +Battle()
 +DisplayTradeDeals()
 +CreateTradingDeal() 
}


class TradeDeal {
 -Guid Id
 -string username
 -ICard _Card
 -CardType _WantedType
 -double _MinDamage
 +TradeDeal(string id, string username, ICard card, CardType type, double minDmg)
}

class Server{
 -List<User> _users
 -List<User> _usersLoggedIn
 -Dict<string, User> _tokens
 -List<ICard[5]> AvailablePackages
 -List<TradeDeal> TradeDeals
 +string Login(string username, string password)
 +string Register(string username, string password, optional: NameTag, Bio, Status)
 +bool VerifyToken(string Token)
 +string QueueForGame(User user)
 +string SimulateGame(User u1, User u2)
 +string GetStats(User u)
 +string GetScoreboard()
 +string RegisterCardForTrade(user u, Guid cardId)
 +string GetAllTradeDeals()
 +string TradeCard(string cardId, string tradeId)
 
}

@enduml